# lmswitch

./: .gitignore  .gitmodules  LICENSE  README.md  SKILL.md  lmswitch  pyproject.toml
examples/: llama-gguf-vision.yaml  llama-gguf.yaml  vllm-dual.yaml  vllm.yaml
lmswitch/: __init__.py  __main__.py  cli.py  sync.py
lmswitch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lmswitch/models/: __init__.py  cluster.py  loader.py
lmswitch/runtimes/: __init__.py  base.py  llama.py  systemd.py  vllm.py  vllm_dual.py  vllm_dual_ray.py  wait.py
lmswitch/system/: __init__.py  checks.py  io.py  memory.py  usage.py
scripts/: capture_verification_evidence.py
tests/: conftest.py  test_checks.py  test_cli.py  test_cluster.py  test_cmd_serve.py  test_llama_cmd.py  test_process_lifecycle.py  test_sync.py  test_usage.py  test_vllm_and_abort.py  test_vllm_dual.py  test_vllm_dual_ray.py  test_vllm_logging.py
tests/support/: __init__.py  minimal_tree.py
