[project]
name = "lmswitch"
version = "1.2.0"
description = "List and toggle local LLMs"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
lmswitch = "lmswitch.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lmswitch", "lmswitch.models", "lmswitch.runtimes", "lmswitch.system"]

[tool.pytest.ini_options]
pythonpath = ["tests"]


